collapsed navigation bar fix

--- a/IT Courses mockup/styles/styles.css
+++ b/IT Courses mockup/styles/styles.css
@@ -12,6 +12,10 @@ body {
     background-color: #E3F1F2 !important;
 }
 
+.nav-link {
+    padding-left: 1em !important;
+}
+
 .contact-info,
 .courses-info,
 .auth-reg-container,
